--- a/web/resources/css/style_main.css
+++ b/web/resources/css/style_main.css
@@ -9,37 +9,37 @@ body {
     height: 100%;
 }
 
-ul, ol, dl { 
+ul, ol, dl {
     padding: 0;
     margin: 0;
 }
 h1, h2, h3, h4, h5, h6, p {
-    margin-top: 0;	 
+    margin-top: 0;
     padding-right: 15px;
-    padding-left: 15px; 
+    padding-left: 15px;
 }
 
-a img { 
+a img {
     border: none;
 }
 
 
 a:link {
     color:#414958;
-    text-decoration: underline; 
+    text-decoration: underline;
 }
 a:visited {
     color: #4E5869;
     text-decoration: underline;
 }
-a:hover, a:active, a:focus { 
+a:hover, a:active, a:focus {
     text-decoration: none;
 }
 
 .container {
     width: 1000px;
     background-color: #FFFFFF;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 
@@ -83,12 +83,12 @@ a:hover, a:active, a:focus {
     color: #999;
 }
 
-.genres  {
+.genres a, a:visited {
     padding: 3px 3px 3px 15px;
-    display: block; 
+    display: block;
     text-decoration: none;
     color: #000;
-    
+
 }
 
 
@@ -160,10 +160,10 @@ a:hover, a:active, a:focus {
      filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
      background: #378de5;
      cursor:pointer;
-}.search_button:active {
-    position:relative;
-    top:1px;
-}
+ }.search_button:active {
+      position:relative;
+      top:1px;
+  }
 
 
 
@@ -218,8 +218,8 @@ a:hover, a:active, a:focus {
 
 .book_title a{
     color:#378de5 ;
-    font-weight: bold; 
-    font-size: 15px; 
+    font-weight: bold;
+    font-size: 15px;
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -261,8 +261,9 @@ a:hover, a:active, a:focus {
 }
 
 .pdf_viewer{
+    margin: 0 auto;
     width:850px;
-    margin: 30px auto 0;
+    margin-top:30px;
     height: 1000px;
 }
 
