--- a/web/templates/left_menu.xhtml
+++ b/web/templates/left_menu.xhtml
@@ -22,16 +22,17 @@
     <ui:composition>
         <h4>#{msg.genres}</h4>
 
-        <h:dataTable value="#{genreController.genreList}" var="g" styleClass="genres">
-            <h:column>
-                <h:form>
+        <h:form styleClass="genres">
+            <ui:repeat value="#{genreController.genreList}" var="g">
+                <h:column>
+
                     <h:commandLink action="#{searchController.fillBooksByGenre()}" value="#{g.name}">
                         <f:param name="genre_id" value="#{g.id}"/>
                     </h:commandLink>
-                </h:form>
-            </h:column>
-        </h:dataTable>
 
+                </h:column>
+            </ui:repeat>
+        </h:form>
 
     </ui:composition>
 </h:body>
