work on separating books by pages

--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -33,14 +33,14 @@
             <h:form>
                 <h5>#{msg.welcome}, #{user.username}</h5>
                 <h:commandLink action="#{loginController.exit()}" value="#{msg.exit}"/>
-
             </h:form>
         </div>
 
         <div class="search_div">
             <h:form styleClass="search_form">
                 <h:inputText id="search_str" styleClass="search_string" value="#{searchController.searchString}"/>
-                <h:commandButton value="#{msg.search}" styleClass="search_button" action="#{searchController.fillBookBySearch}"/>
+                <h:commandButton value="#{msg.search}" styleClass="search_button"
+                                 action="#{searchController.fillBookBySearch()}"/>
                 <h:selectOneMenu value="#{searchController.searchType}">
                     <f:selectItems value="${searchController.searchList}"/>
                 </h:selectOneMenu>
@@ -49,13 +49,14 @@
         </div>
 
         <div class="letters">
-           <h:form>
-               <ui:repeat value="#{searchController.letters}" var="letter">
-                   <h:commandLink action="#{searchController.fillBookByLetter()}" value="#{letter}">
-                       <f:param name="letter" value="#{letter}"/>
-                   </h:commandLink>
-               </ui:repeat>
-           </h:form>
+            <h:form>
+                <ui:repeat value="#{searchController.letters}" var="letter">
+                    <h:commandLink action="#{searchController.fillBookByLetter()}" value="#{letter}"
+                                   styleClass="#{letter ==searchController.selectedLetter ? 'selected_letter' :''}">
+                        <f:param name="letter" value="#{letter}"/>
+                    </h:commandLink>
+                </ui:repeat>
+            </h:form>
         </div>
     </ui:composition>
 
