--- a/web/templates/left_menu.xhtml
+++ b/web/templates/left_menu.xhtml
@@ -24,13 +24,12 @@
 
         <h:form styleClass="genres">
             <ui:repeat value="#{genreController.genreList}" var="g">
-                <h:column>
 
-                    <h:commandLink action="#{searchController.fillBooksByGenre()}" value="#{g.name}">
-                        <f:param name="genre_id" value="#{g.id}"/>
-                    </h:commandLink>
+                <h:commandLink action="#{searchController.fillBooksByGenre()}" value="#{g.name}"
+                               styleClass="#{g.id ==searchController.selectedGenreId ? 'selected_link': ''}">
+                    <f:param name="genre_id" value="#{g.id}"/>
+                </h:commandLink>
 
-                </h:column>
             </ui:repeat>
         </h:form>
 
