--- a/web/resources/css/style_main.css
+++ b/web/resources/css/style_main.css
@@ -78,6 +78,7 @@ a:hover, a:active, a:focus {
 
 .content_books{
     margin-top:30px;
+    float:left;
 }
 
 
@@ -150,10 +151,8 @@ a:hover, a:active, a:focus {
     -moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
     -webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
     box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
-    background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5');
-    background-color:#79bbff;
+    background: #79bbff;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
     border-radius:6px;
@@ -167,11 +166,9 @@ a:hover, a:active, a:focus {
     text-decoration:none;
     text-shadow:1px 1px 0px #528ecc;
 }.search_button:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-    background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
-    background-color:#378de5;
-    cursor:pointer;
+     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
+     background: #378de5;
+     cursor:pointer;
 }.search_button:active {
     position:relative;
     top:1px;
@@ -202,6 +199,14 @@ a:hover, a:active, a:focus {
 .col1{
     vertical-align: top;
     width: 100px;
+}
+
+.col2 a.content_link{
+    color:red;
+    font-size: 11px;
+    text-decoration: underline;
+    margin-left: 5px;
+    font-weight: bold
 }
 
 .col2{
@@ -299,6 +304,8 @@ a:hover, a:active, a:focus {
     margin-left: 15px;
     width: 100%;
     float:left;
+
+
 }
 .pager .selected_page{
     color:red;
